--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,6 @@
-[package]
-name = "bounce"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace]
+members = [
+    "packages/bounce",
+    "packages/bounce-macros",
+]
+resolver = "2"
