--- a/packages/bounce/Cargo.toml
+++ b/packages/bounce/Cargo.toml
@@ -10,3 +10,9 @@ wasm-bindgen = "0.2.78"
 wasm-bindgen-futures = "0.4.28"
 yew = { git = "https://github.com/yewstack/yew" }
 bounce-macros = { path = "../bounce-macros" }
+
+[dev-dependencies.web-sys]
+version = "0.3.54"
+features = [
+    "HtmlInputElement",
+]
