--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 bounce = { path = "../../packages/bounce" }
-yew = { git = "https://github.com/yewstack/yew" }
+yew = "0.19.3"
 log = "0.4.14"
 console_log = { version = "0.2.0", features = ["color"] }
 
