--- a/packages/bounce/Cargo.toml
+++ b/packages/bounce/Cargo.toml
@@ -8,7 +8,7 @@ anymap2 = "0.13.0"
 once_cell = "1.8.0"
 wasm-bindgen = "0.2.78"
 wasm-bindgen-futures = "0.4.28"
-yew = { git = "https://github.com/yewstack/yew" }
+yew = "0.19.3"
 bounce-macros = { path = "../bounce-macros" }
 
 [dev-dependencies.web-sys]
