--- a/packages/bounce/Cargo.toml
+++ b/packages/bounce/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["web", "wasm", "yew", "state-management"]
 categories = ["wasm", "web-programming"]
 readme = "../../README.md"
 homepage = "https://github.com/futursolo/bounce"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 anymap2 = "0.13.0"
