--- a/packages/bounce/Cargo.toml
+++ b/packages/bounce/Cargo.toml
@@ -20,6 +20,7 @@ wasm-bindgen = "0.2.78"
 wasm-bindgen-futures = "0.4.28"
 yew = "0.19.3"
 bounce-macros = { path = "../bounce-macros", version = "0.1.3" }
+futures = "0.3"
 
 [dev-dependencies.web-sys]
 version = "0.3.54"
