--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ members = [
     "examples/notion",
     "examples/simple",
     "examples/partial-render",
+    "examples/random-uuid",
 ]
 resolver = "2"
