Add Input Selector.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ members = [
     "examples/partial-render",
     "examples/random-uuid",
     "examples/divisibility",
+    "examples/divisibility-input",
 ]
 resolver = "2"
