--- a/packages/bounce/Cargo.toml
+++ b/packages/bounce/Cargo.toml
@@ -21,6 +21,7 @@ wasm-bindgen-futures = "0.4.28"
 yew = "0.19.3"
 bounce-macros = { path = "../bounce-macros", version = "0.2.0" }
 futures = "0.3.19"
+async-trait = "0.1.52"
 
 [dev-dependencies.web-sys]
 version = "0.3.55"
