Fix mutation and query. Add docs and example.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ members = [
     "examples/random-uuid",
     "examples/divisibility",
     "examples/divisibility-input",
+    "examples/queries-mutations",
 ]
 resolver = "2"
