--- a/.github/workflows/everything.yml
+++ b/.github/workflows/everything.yml
@@ -4,6 +4,78 @@ name: Run Tests & Publishing
 on: [push, pull_request]
 
 jobs:
+  lint:
+    name: Lint Codebase
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Project
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
+          profile: minimal
+
+      - name: Restore Rust Cache
+        uses: Swatinem/rust-cache@v1
+
+      - name: Setup Rust wasm
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: wasm32-unknown-unknown
+          profile: minimal
+
+      - name: Install cargo-make
+        uses: davidB/rust-cargo-make@v1
+
+      - name: Run lints
+        run: cargo make lints
+
+  build:
+    name: Build Examples
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Project
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
+          profile: minimal
+
+      - name: Restore Rust Cache
+        uses: Swatinem/rust-cache@v1
+
+      - name: Setup Rust wasm
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: wasm32-unknown-unknown
+          profile: minimal
+
+      - name: Setup trunk
+        uses: jetli/trunk-action@v0.1.0
+        with:
+          version: "latest"
+
+      - name: Build Examples
+        run: |
+          for d in "examples/"*
+          do
+            trunk build --release examples/$d/index.html
+          done
+
   test:
     name: Run Tests
     runs-on: ubuntu-latest
@@ -24,33 +96,6 @@ jobs:
       - name: Restore Rust Cache
         uses: Swatinem/rust-cache@v1
 
-      - name: Run cargo fmt -- --check
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-
-      - name: Run cargo clippy
-        uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          options: --all --all-features
-        env:
-          RUSTFLAGS: "--cfg releasing"
-
-      - name: Run cargo test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features --all
-        env:
-          RUSTFLAGS: "--cfg releasing"
-
-      - name: Setup trunk
-        uses: jetli/trunk-action@v0.1.0
-        with:
-          version: "latest"
-
       - name: Setup Rust wasm
         uses: actions-rs/toolchain@v1
         with:
@@ -58,24 +103,22 @@ jobs:
           target: wasm32-unknown-unknown
           profile: minimal
 
-      - name: Run cargo build --all --target=wasm32-unknown-unknown
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --all --target=wasm32-unknown-unknown
-        env:
-          RUSTFLAGS: "--cfg releasing"
+      - name: Install wasm-pack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
-      # - name: Install wasm-pack
-      #   run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+      - name: Install cargo-make
+        uses: davidB/rust-cargo-make@v1
 
-      # - name: Run Browser Tests
-      #   run: wasm-pack test --headless --chrome --firefox examples/yew-integration
+      - name: Run Browser Tests
+        run: cargo make wasm-tests
 
   publish:
     name: Publish to crates.io
     runs-on: ubuntu-latest
-    needs: test
+    needs:
+      - lint
+      - build
+      - test
     if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/'))
     steps:
       - name: Checkout Project
