--- a/examples/partial-render/Cargo.toml
+++ b/examples/partial-render/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bounce = { path = "../../packages/bounce" }
+bounce = { path = "../../crates/bounce" }
 yew = "0.19.3"
 stylist = { version = "0.10.0", features = ["yew_integration"] }
 log = "0.4.14"
