--- a/examples/notion/Cargo.toml
+++ b/examples/notion/Cargo.toml
@@ -11,7 +11,7 @@ yew = "0.19.3"
 stylist = { version = "0.10.0", features = ["yew_integration"] }
 log = "0.4.14"
 console_log = { version = "0.2.0", features = ["color"] }
-wasm_bindgen = "0.2.78"
+wasm-bindgen = "0.2.78"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
