--- a/examples/partial-render/Cargo.toml
+++ b/examples/partial-render/Cargo.toml
@@ -11,3 +11,9 @@ yew = "0.19.3"
 stylist = { version = "0.10.0", features = ["yew_integration"] }
 log = "0.4.14"
 console_log = { version = "0.2.0", features = ["color"] }
+wasm-bindgen = "0.2.78"
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3"
+gloo = { version = "0.5", features = ["futures"] }
+web-sys = "0.3"
