--- a/examples/queries-mutations/Cargo.toml
+++ b/examples/queries-mutations/Cargo.toml
@@ -15,9 +15,14 @@ serde = { version = "1.0.132", features = ["derive"] }
 uuid = { version = "0.8.2", features = ["wasm-bindgen", "serde"] }
 async-trait = "0.1.52"
 wasm-bindgen-futures = "0.4.28"
+wasm-bindgen = "0.2.78"
 
 [dependencies.web-sys]
 version = "0.3.55"
 features = [
     "HtmlInputElement",
 ]
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3"
+gloo = { version = "0.5", features = ["futures"] }
