--- a/examples/random-uuid/Cargo.toml
+++ b/examples/random-uuid/Cargo.toml
@@ -12,9 +12,14 @@ log = "0.4.14"
 console_log = { version = "0.2.0", features = ["color"] }
 reqwest = { version = "0.11.8", features = ["json"] }
 serde = { version = "1.0.132", features = ["derive"] }
+wasm-bindgen = "0.2.78"
 
 [dependencies.web-sys]
 version = "0.3.55"
 features = [
     "HtmlInputElement",
 ]
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3"
+gloo = { version = "0.5", features = ["futures"] }
