Add test to queries-mutations.

--- a/.github/workflows/everything.yml
+++ b/.github/workflows/everything.yml
@@ -160,6 +160,7 @@ jobs:
         shell: bash
 
       # Not possible if bounce-macros does not have a compatible version on crates.io
+      # See: https://github.com/rust-lang/cargo/issues/1169
       # - name: Run cargo publish --dry-run for bounce
       #   if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       #   uses: actions-rs/cargo@v1
