--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -25,6 +25,7 @@ async-trait = { version = "0.1.52", optional = true }
 
 [features]
 query = ["async-trait"]
+helmet = []
 
 [dev-dependencies.web-sys]
 version = "0.3.55"
