Fix slice and input selector. Add test and example.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ members = [
     "examples/divisibility-input",
     "examples/queries-mutations",
     "examples/title",
+    "examples/helmet-title",
 ]
 resolver = "2"
