--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -40,6 +40,8 @@ helmet = ["gloo", "web-sys"]
 version = "0.3.55"
 features = [
     "HtmlInputElement",
+    "HtmlStyleElement",
+    "DomTokenList",
 ]
 
 [package.metadata.docs.rs]
