--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -33,6 +33,8 @@ features = [
     "HtmlStyleElement",
     "DomTokenList",
     "HtmlLinkElement",
+    "HtmlMetaElement",
+    "HtmlBaseElement",
 ]
 
 [features]
