Optimise helmet bridge implementation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ members = [
     "examples/queries-mutations",
     "examples/title",
     "examples/helmet-title",
+    "examples/persist",
 ]
 resolver = "2"
