--- a/examples/helmet-title/Cargo.toml
+++ b/examples/helmet-title/Cargo.toml
@@ -8,14 +8,12 @@ edition = "2021"
 [dependencies]
 bounce = { path = "../../crates/bounce", features = ["helmet"] }
 yew = "0.19.3"
-log = "0.4.14"
+log = "0.4.17"
 console_log = { version = "0.2.0", features = ["color"] }
-wasm-bindgen = "0.2.78"
-yew-router = "0.16"
-gloo = { version = "0.6.0", features = ["futures"] }
-
-[dependencies.web-sys]
-version = "0.3.55"
+wasm-bindgen = "0.2.80"
+yew-router = "0.16.0"
+gloo = { version = "0.7.0", features = ["futures"] }
+web-sys= "0.3.57"
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3"
+wasm-bindgen-test = "0.3.30"
