--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ members = [
     "examples/persist",
 ]
 resolver = "2"
+
+# We patch yew for examples until stylist catches up.
+[patch.crates-io]
+yew = { git = "https://github.com/yewstack/yew" }
