--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -18,9 +18,10 @@ anymap2 = "0.13.0"
 once_cell = "1.12.0"
 wasm-bindgen = "0.2.80"
 wasm-bindgen-futures = "0.4.30"
-yew = "0.19.3"
+yew = { git = "https://github.com/yewstack/yew" }
 bounce-macros = { path = "../bounce-macros", version = "0.4.0" }
 futures = "0.3.21"
+
 async-trait = { version = "0.1.56", optional = true }
 gloo = { version = "0.8.0", features = ["futures"], optional = true }
 
@@ -38,6 +39,8 @@ features = [
 ]
 
 [features]
+csr = ["yew/csr"]
+ssr = ["yew/ssr", "yew/tokio"]
 query = ["async-trait"]
 helmet = ["gloo", "web-sys"]
 
