--- a/examples/partial-render/Cargo.toml
+++ b/examples/partial-render/Cargo.toml
@@ -7,9 +7,9 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bounce = { path = "../../crates/bounce" }
-yew = "0.19.3"
-stylist = { version = "0.10.0", features = ["yew_integration"] }
+bounce = { path = "../../crates/bounce", features = ["csr"] }
+yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
+stylist = { version = "0.10.0", features = ["yew"] }
 log = "0.4.17"
 console_log = { version = "0.2.0", features = ["color"] }
 wasm-bindgen = "0.2.80"
