--- a/examples/random-uuid/Cargo.toml
+++ b/examples/random-uuid/Cargo.toml
@@ -7,8 +7,8 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bounce = { path = "../../crates/bounce" }
-yew = "0.19.3"
+bounce = { path = "../../crates/bounce", features = ["csr"] }
+yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
 log = "0.4.17"
 console_log = { version = "0.2.0", features = ["color"] }
 reqwest = { version = "0.11.10", features = ["json"] }
