--- a/examples/title/Cargo.toml
+++ b/examples/title/Cargo.toml
@@ -7,12 +7,12 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bounce = { path = "../../crates/bounce" }
-yew = "0.19.3"
+bounce = { path = "../../crates/bounce", features = ["csr"] }
+yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
 log = "0.4.17"
 console_log = { version = "0.2.0", features = ["color"] }
 wasm-bindgen = "0.2.80"
-yew-router = "0.16.0"
+yew-router = { git = "https://github.com/yewstack/yew" }
 gloo = { version = "0.8.0", features = ["futures"] }
 web-sys= "0.3.57"
 
