--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -47,6 +47,7 @@ helmet = ["gloo", "web-sys"]
 [dev-dependencies]
 wasm-bindgen-test = "0.3.30"
 gloo = { version = "0.8.0", features = ["futures"] }
+yew = { git = "https://github.com/yewstack/yew", features = ["csr", "ssr", "tokio"] }
 
 [dev-dependencies.web-sys]
 version = "0.3.57"
