--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -2,7 +2,7 @@
 name = "bounce"
 version = "0.4.0"
 edition = "2021"
-repository = "https://github.com/futursolo/bounce"
+repository = "https://github.com/bounce-rs/bounce"
 authors = [
     "Kaede Hoshiakwa <futursolo@icloud.com>",
 ]
@@ -10,7 +10,7 @@ description = "The uncomplicated state management library for Yew."
 keywords = ["web", "wasm", "yew", "state-management"]
 categories = ["wasm", "web-programming"]
 readme = "../../README.md"
-homepage = "https://github.com/futursolo/bounce"
+homepage = "https://github.com/bounce-rs/bounce"
 license = "MIT OR Apache-2.0"
 rust-version = "1.60.0"
 
@@ -40,7 +40,6 @@ features = [
 ]
 
 [features]
-csr = ["yew/csr"]
 ssr = ["yew/ssr", "yew/tokio"]
 query = ["async-trait"]
 helmet = ["gloo", "web-sys"]
