--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bounce = { path = "../../crates/bounce", features = ["csr"] }
+bounce = { path = "../../crates/bounce" }
 yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
 log = "0.4.17"
 console_log = { version = "0.2.0", features = ["color"] }
