--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -40,7 +40,7 @@ features = [
 ]
 
 [features]
-ssr = ["yew/ssr", "yew/tokio"]
+ssr = ["yew/ssr"]
 query = ["async-trait"]
 helmet = ["gloo", "web-sys"]
 
