--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -25,6 +25,9 @@ futures = "0.3.21"
 
 async-trait = { version = "0.1.56", optional = true }
 gloo = { version = "0.8.0", features = ["futures"], optional = true }
+html-escape = { version = "0.2.12", optional = true }
+serde = { version = "1.0.147", features = ["derive"] }
+bincode = "1.3.3"
 
 [dependencies.web-sys]
 version = "0.3.57"
@@ -40,14 +43,14 @@ features = [
 ]
 
 [features]
-ssr = ["yew/ssr"]
+ssr = ["html-escape"]
 query = ["async-trait"]
 helmet = ["gloo", "web-sys"]
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.30"
 gloo = { version = "0.8.0", features = ["futures"] }
-yew = { git = "https://github.com/yewstack/yew", features = ["csr", "ssr", "tokio"] }
+yew = { git = "https://github.com/yewstack/yew", features = ["csr", "ssr"] }
 
 [dev-dependencies.web-sys]
 version = "0.3.57"
