--- a/examples/partial-render/Cargo.toml
+++ b/examples/partial-render/Cargo.toml
@@ -8,8 +8,8 @@ publish = false
 
 [dependencies]
 bounce = { path = "../../crates/bounce" }
-yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
-stylist = { version = "0.10.0", features = ["yew"] }
+yew = { version = "0.20", features = ["csr"] }
+stylist = { version = "0.11.0", features = ["yew"] }
 log = "0.4.17"
 console_log = { version = "0.2.0", features = ["color"] }
 wasm-bindgen = "0.2.80"
