--- a/examples/queries-mutations/Cargo.toml
+++ b/examples/queries-mutations/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 
 [dependencies]
 bounce = { path = "../../crates/bounce", features = ["query"] }
-yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
+yew = { version = "0.20", features = ["csr"] }
 log = "0.4.17"
 console_log = { version = "0.2.0", features = ["color"] }
 reqwest = { version = "0.11.10", features = ["json"] }
