--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 
 [dependencies]
 bounce = { path = "../../crates/bounce" }
-yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
+yew = { version = "0.20", features = ["csr"] }
 log = "0.4.17"
 console_log = { version = "0.2.0", features = ["color"] }
 wasm-bindgen = "0.2.80"
