--- a/examples/title/Cargo.toml
+++ b/examples/title/Cargo.toml
@@ -8,11 +8,11 @@ publish = false
 
 [dependencies]
 bounce = { path = "../../crates/bounce" }
-yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
+yew = { version = "0.20", features = ["csr"] }
 log = "0.4.17"
 console_log = { version = "0.2.0", features = ["color"] }
 wasm-bindgen = "0.2.80"
-yew-router = { git = "https://github.com/yewstack/yew" }
+yew-router = "0.17"
 gloo = { version = "0.8.0", features = ["futures"] }
 web-sys= "0.3.57"
 
