--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bounce"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 repository = "https://github.com/bounce-rs/bounce"
 authors = [
@@ -20,11 +20,13 @@ once_cell = "1.12.0"
 wasm-bindgen = "0.2.80"
 wasm-bindgen-futures = "0.4.30"
 yew = "0.20"
-bounce-macros = { path = "../bounce-macros", version = "0.4.0" }
+bounce-macros = { path = "../bounce-macros", version = "0.5.0" }
 futures = "0.3.21"
 
 async-trait = { version = "0.1.56", optional = true }
 gloo = { version = "0.8.0", features = ["futures"], optional = true }
+html-escape = { version = "0.2.12", optional = true }
+serde = { version = "1.0.147", features = ["derive"] }
 
 [dependencies.web-sys]
 version = "0.3.57"
@@ -37,9 +39,11 @@ features = [
     "HtmlLinkElement",
     "HtmlMetaElement",
     "HtmlBaseElement",
+    "NodeList",
 ]
 
 [features]
+ssr = ["html-escape"]
 query = ["async-trait"]
 helmet = ["gloo", "web-sys"]
 
