--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "examples/divisibility",
     "examples/divisibility-input",
     "examples/queries-mutations",
+    "examples/queries-ssr",
     "examples/title",
     "examples/helmet-title",
     "examples/helmet-ssr",
