--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -18,10 +18,10 @@ rust-version = "1.60.0"
 anymap2 = "0.13.0"
 once_cell = "1.16.0"
 wasm-bindgen = "0.2.83"
-wasm-bindgen-futures = "0.4.33"
 yew = "0.20"
 bounce-macros = { path = "../bounce-macros", version = "0.5.0" }
 futures = "0.3.25"
+# log = "0.4"
 
 async-trait = { version = "0.1.59", optional = true }
 gloo = { version = "0.8.0", features = ["futures"], optional = true }
