--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -18,7 +18,6 @@ rust-version = "1.60.0"
 anymap2 = "0.13.0"
 once_cell = "1.16.0"
 wasm-bindgen = "0.2.83"
-wasm-bindgen-futures = "0.4.33"
 yew = "0.20"
 bounce-macros = { path = "../bounce-macros", version = "0.5.0" }
 futures = "0.3.25"
@@ -51,6 +50,7 @@ helmet = ["gloo", "web-sys"]
 wasm-bindgen-test = "0.3.33"
 gloo = { version = "0.8.0", features = ["futures"] }
 yew = { version = "0.20", features = ["csr", "ssr"] }
+thiserror = "1"
 
 [dev-dependencies.web-sys]
 version = "0.3.60"
