--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -15,20 +15,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-          profile: minimal
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Restore Rust Cache
         uses: Swatinem/rust-cache@v2
 
       - name: Install mdbook
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: mdbook
+        run: cargo install --locked mdbook
 
       - name: Build Website
         run: mdbook build
