--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bounce"
-version = "0.5.0"
+version = "0.6.0"
 edition = "2021"
 repository = "https://github.com/bounce-rs/bounce"
 authors = [
@@ -19,13 +19,14 @@ anymap2 = "0.13.0"
 once_cell = "1.16.0"
 wasm-bindgen = "0.2.83"
 yew = "0.20"
-bounce-macros = { path = "../bounce-macros", version = "0.5.0" }
+bounce-macros = { path = "../bounce-macros", version = "0.6.0" }
 futures = "0.3.25"
 
 async-trait = { version = "0.1.59", optional = true }
 gloo = { version = "0.8.0", features = ["futures"], optional = true }
 html-escape = { version = "0.2.12", optional = true }
 serde = { version = "1.0.148", features = ["derive"] }
+tracing = "0.1"
 
 [dependencies.web-sys]
 version = "0.3.60"
