--- a/.github/workflows/everything.yml
+++ b/.github/workflows/everything.yml
@@ -61,6 +61,11 @@ jobs:
   test:
     name: Run Tests
     runs-on: ubuntu-latest
+    services:
+      httpbin:
+        image: kennethreitz/httpbin
+        ports:
+          - 8080:80
     steps:
       - name: Checkout Project
         uses: actions/checkout@v3
