--- a/crates/bounce-macros/Cargo.toml
+++ b/crates/bounce-macros/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
 name = "bounce-macros"
-version = "0.7.0"
+version = "0.8.0"
 edition = "2021"
 repository = "https://github.com/bounce-rs/bounce"
-authors = [
-    "Kaede Hoshiakwa <futursolo@icloud.com>",
-]
+authors = ["Kaede Hoshiakwa <futursolo@icloud.com>"]
 description = "The uncomplicated state management library for Yew."
 keywords = ["web", "wasm", "yew", "state-management"]
 categories = ["wasm", "web-programming"]
 readme = "README.md"
 homepage = "https://github.com/bounce-rs/bounce"
 license = "MIT OR Apache-2.0"
+rust-version = "1.64"
 
 [lib]
 proc-macro = true
