--- a/crates/bounce/Cargo.toml
+++ b/crates/bounce/Cargo.toml
@@ -1,25 +1,23 @@
 [package]
 name = "bounce"
-version = "0.7.0"
+version = "0.8.0"
 edition = "2021"
 repository = "https://github.com/bounce-rs/bounce"
-authors = [
-    "Kaede Hoshiakwa <futursolo@icloud.com>",
-]
+authors = ["Kaede Hoshiakwa <futursolo@icloud.com>"]
 description = "The uncomplicated state management library for Yew."
 keywords = ["web", "wasm", "yew", "state-management"]
 categories = ["wasm", "web-programming"]
 readme = "../../README.md"
 homepage = "https://github.com/bounce-rs/bounce"
 license = "MIT OR Apache-2.0"
-rust-version = "1.60.0"
+rust-version = "1.64.0"
 
 [dependencies]
 anymap2 = "0.13.0"
 once_cell = "1.18.0"
 wasm-bindgen = "0.2.87"
 yew = "0.20"
-bounce-macros = { path = "../bounce-macros", version = "0.7.0" }
+bounce-macros = { path = "../bounce-macros", version = "0.8.0" }
 futures = "0.3.28"
 
 async-trait = { version = "0.1.68", optional = true }
@@ -55,9 +53,7 @@ thiserror = "1"
 
 [dev-dependencies.web-sys]
 version = "0.3.64"
-features = [
-    "HtmlInputElement",
-]
+features = ["HtmlInputElement"]
 
 [package.metadata.docs.rs]
 all-features = true
